[package]
name = "rust_serial"
version = "0.1.0"
authors = ["auralshin <anshulspartan141@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["index.node"]


[lib]
crate-type = ["cdylib"]

[build-dependencies]
node-bindgen = { version = "5.1", features = ["build"] }

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.1.1"
flate2 = "1.0"
prost = "0.11.9"
prost-derive = "0.11.9"
bson = "2.6.1"
node-bindgen = { version = "5.1" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
