[package]
name = "rust_serial"
version = "0.1.0"
authors = ["Anshul Rai <anshulspartan141@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.65"
flate2 = "1.0.22"
tokio = {version = "1.28.1", features = ["full"]}
futures = "0.3.28"
thiserror = "1.0.30"
base64 = "0.21.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]